# LINO

./: .gitignore  Image_preparation.ipynb  README.md  pyproject.toml
moonrise-fm/: HOW_TO_CREATE_LABELS.txt  create_patches.py  export_labelimg.py  find_hyperparam.py  label-QA.txt  label-normal.txt  labels.txt  labels2.txt  sandbox.py  test.colour.py  train_lighting.py
moonrise-fm/dataloader/: acdc_processing.py  image_load.py  utils.py
moonrise-fm/deprecated/: environment.yml  params.json  params_prime.json
moonrise-fm/deprecated/notebooks/: Image_generation.ipynb  Image_predict.ipynb
moonrise-fm/emunet/: emunet.py
moonrise-fm/fct/: db.sqlite3  find_hyperparam.py  main.py  model_prediction_dirs.py  model_prediction_fullimage.py  train_lighting.py
moonrise-fm/fct/dataloader/: acdc_loader.py  acdc_processing.py
moonrise-fm/fct/deprecated/: params_moonrise.json  params_raupe.json
moonrise-fm/fct/emunet/: emunet_parts.py
moonrise-fm/fct/fct/: main.py
moonrise-fm/fct/fct_utils/: args_utils.py  data_utils.py
moonrise-fm/fct/img_lib/: __init__.py  extract_patches.py  visualization.py
moonrise-fm/fct/loss/: loss.py
moonrise-fm/fct/transunet/: convnext.py  (+1 more)
moonrise-fm/img_lib/: generate_images.py  pytorch_pruner_fix.py  utils.py
moonrise-fm/lib/: extract_patches.py  utils.py  visualization.py
moonrise-fm/seabed_Unet/: __init__.py  emunet.py  load_data.py  unet_lighting.py
moonrise-fm/transunet/: common.py  transunet.py
moonrise-fm/unet/: load_data.py  unet_lighting.py  unet_parts.py
moonrise-fm/unet3plus/: unet3plus.py
tests/: unet_test.py
(+5 files in other folders)
