[tool.poetry]
name = "moonrise"
version = "0.1.0"
description = ""
authors = ["pdyroey <35566277+pdyroey@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "moonrise-fm"}]

[tool.poetry.dependencies]
python = "^3.10, <3.11"
scikit-image = "^0.19.3"
numpy = "^1.23.4"
napari = "^0.4.16"
certifi = "^2022.9.24"
torch = { version = "1.12.1", source="torch"}
torchaudio = { version = "0.12.1", source="torch"}
torchvision = { version = "0.13.1", source="torch"}
matplotlib = "^3.6.2"
albumentations = "^1.3.0"
tensorboard = "^2.11.0"
scipy = "1.8.1"
optuna = "^3.0.3"
pytest = "^7.2.0"
attrs = "^22.1.0"
tensorboardx = "^2.5.1"
natsort = "^8.2.0"
labelme = "^5.1.1"
notebook = "^6.5.2"
jupyter = "^1.0.0"
pytorch-lightning = "^1.9.0"
torchmetrics = "^0.11.0"
plotly = "^5.13.0"
icecream = "^2.1.3"
simpleitk = "^2.2.1"
h5py = "^3.8.0"
batchgenerators = "^0.24"
nibabel = "^5.0.1"
monai = "^1.1.0"
[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu116"
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
